<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@+id/scrollView1"
	android:orientation="vertical" 
	android:layout_height="wrap_content"
	android:layout_width="fill_parent">

	<LinearLayout android:id="@+id/linearLayout1" 
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<FrameLayout
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			>

			<ImageView android:id="@+id/imageView1"
				android:layout_height="wrap_content" android:scaleType="centerInside" android:adjustViewBounds="true"
				android:layout_gravity="center_horizontal"  android:src="@drawable/header"
				android:layout_width="wrap_content"
				>
				</ImageView>

			<ImageView android:id="@+id/imgBtnRed"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:scaleType="centerInside" 
				android:adjustViewBounds="true"
				android:src="@drawable/status_button_red"
				android:layout_gravity="center_vertical|right"
				android:visibility="invisible"
				>
				</ImageView>

			<ImageView android:id="@+id/imgBtnGreen"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:scaleType="centerInside"
				android:adjustViewBounds="true"
				android:src="@drawable/status_button_green"
				android:layout_gravity="center_vertical|right"
				android:visibility="invisible"
				>
				</ImageView>

		</FrameLayout>

			
		<Button android:id="@+id/btnInfo" 
			android:layout_height="wrap_content"
			android:background="@drawable/custom_button" 
			android:textSize="18dp"
			android:text="@string/btn_info"
			android:textColor="#ffffff"
			android:textStyle="bold" 
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="25dp"
			android:layout_width="wrap_content"
			></Button>
			
		<Button android:id="@+id/btnPrefs" 
			android:layout_height="wrap_content"
			android:background="@drawable/custom_button" 
			android:textSize="15dp"
			android:text="@string/btn_Settings" 
			android:textColor="#ffffff"
			android:layout_marginTop="5dp"
			android:layout_gravity="center_horizontal"
			android:layout_width="wrap_content"
			>
			</Button>
			
		<Button android:id="@+id/btnExit" 
			android:layout_height="wrap_content"
			android:background="@drawable/custom_button" 
			android:textSize="15dp"
			android:text="@string/btn_Exit" 
			android:textColor="#ffffff"
			android:layout_gravity="center_horizontal"
			android:layout_width="wrap_content" android:layout_marginTop="38dp">
			</Button>
		<TextView 
			android:text="@string/dbg_reminderTextview" 
			android:id="@+id/textViewDebugReminder"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="10dp"
			android:textColor="#992222"
			android:visibility="invisible"
			></TextView>
			
	</LinearLayout>
</ScrollView>


